# atmofrance

./: .env.example  .gitignore  CHECKLIST_demo.md  Makefile  README.md  atmofrance_pipeline.py  ci.yml  docker-compose.yml  fix_airflow_launcher.sh  fix_dashboard_deps.sh  fix_phase6_psycopg.sh  fix_psycopg_robust.sh  init_git.sh  install_dag.sh  pyproject.toml  reprendre_projet.sh  requirements-dev.txt  setup_phase10.sh  setup_phase101.sh  setup_phase11.sh  setup_phase4.sh  setup_phase4b.sh  setup_phase5.sh  setup_phase6.sh  setup_phase7.sh  setup_phase8.sh  setup_phase9.sh
.github/workflows/: ci.yml
api/: main.py  queries.py  requirements.txt
dashboard/: app.py  requirements.txt
data/samples/: idx.html  idx_racine.html  index2026.html
infra/airflow/: lancer_airflow.sh
infra/airflow/dags/: atmofrance_pipeline.py
infra/airflow/home/: airflow.cfg  airflow.db-shm  airflow.db-wal  simple_auth_manager_passwords.json.generated
infra/postgres/init/: 01_schema.sql  02_gold.sql
ingestion/: config.py  db.py  geocoding.py  load_stations.py  requirements.txt
ingestion/consumers/: bronze_consumer.py
ingestion/producers/: geodair_producer.py
interface/: README.md  index.html  package-lock.json  package.json
interface/src/: App.jsx  dataService.js  fallbackData.js  i18n.js  index.css
processing/: requirements.txt
processing/spark/: bronze_to_silver.py  gold_to_postgres.py  silver_to_gold.py  spark_utils.py
scripts/: check.sh  diagnostic.sh  lancer_demo.sh  nettoyer_projet.sh
tests/unit/: test_geocoding.py  test_indice.py  test_ingestion.py
(+6 files in other folders)
