[project]
name = "atmofrance"
version = "1.0.0"
description = "Plateforme d'ingenierie de donnees pour la surveillance de la qualite de l'air en France"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
src = ["ingestion", "processing", "api", "dashboard", "tests"]
exclude = [
    ".venv",
    ".venv-airflow",
    "infra/airflow/home",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
